--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
    "require": {
       "coffeecode/router": "^1.0",
       "league/plates": "^3.4",
-      "symfony/dotenv": "^5.3"
+      "symfony/dotenv": "^5.3",
+      "coffeecode/datalayer": "^1.1"
    },
    "autoload": {
       "psr-4": {
