configuraçao do banco de dados okay

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 URL=https://rafadev.rf.gd/
 SITE="Rafael Sousa"
-HOST=localhost
+HOST=sql311.epizy.com
 PORT=3306
 DRIVER=mysql
-DATABASE=financeiro
-USERNAME=rafael
+DATABASE=epiz_29883778_mypage
+USERNAME=3BqJ5SPkxHDn
 PASSWORD=Rafinha@123
 MIGRATIONS=false
