--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
       "coffeecode/router": "^1.0",
       "league/plates": "^3.4",
       "symfony/dotenv": "^5.3",
-      "coffeecode/datalayer": "^1.1"
+      "coffeecode/datalayer": "^1.1",
+      "matthiasmullie/minify": "^1.3"
    },
    "autoload": {
       "psr-4": {
@@ -20,6 +21,7 @@
       },
       "files": [
          "source/config.php",
+         "source/minify.php",
          "source/helpers.php"
       ]
    }
