--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
       "league/plates": "^3.4",
       "symfony/dotenv": "^5.3",
       "coffeecode/datalayer": "^1.1",
-      "matthiasmullie/minify": "^1.3"
+      "matthiasmullie/minify": "^1.3",
+      "coffeecode/paginator": "^1.0"
    },
    "autoload": {
       "psr-4": {
